# librippr

./: Makefile  README.md  librippr.c  librippr.h  meson.build
src/: librippr.c
test/: main.c
